--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level using varius software.
+                  I make high-quality photos of any category at a professional level using various software.
                 </p>
               </div>
 
